--- a/TrenderServices/TrenderServices.csproj
+++ b/TrenderServices/TrenderServices.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="iTradeService.cs" />
     <Compile Include="iTrenderDowJonesService.cs" />
     <Compile Include="iTrenderMtApiService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
